objects/LLC_BI__Loan_Detail__c.object
<CustomObject>
    <description>This object captures additional information about a loan to enhance loan application documentation.</description>
    <fields>
        <fullName>JHJX__TrnRcptId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__APR_Method__c</fullName>
        <description>The user populates this optional picklist field with the APR method to associate with an APR calculation. By default, it is blank.</description>
        <inlineHelpText>Select the APR method you would like to associate with your APR calculation.</inlineHelpText>
        <label>APR Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OpenEnd</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_360_IRR</fullName>
                </value>
                <value>
                    <fullName>YieldPeriod_UnitPeriod_IRR</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>Actuarial</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_360</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_365</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_DaysPerPeriod</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_True360_360</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_True360_365</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_True360_DaysPerPeriod</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_FederalCalendar</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_365.25</fullName>
                </value>
                <value>
                    <fullName>UnitPeriod_True360_365.25</fullName>
                </value>
                <value>
                    <fullName>Actual_360</fullName>
                </value>
                <value>
                    <fullName>True365_360</fullName>
                </value>
                <value>
                    <fullName>Actual_365</fullName>
                </value>
                <value>
                    <fullName>True365_365</fullName>
                </value>
                <value>
                    <fullName>Actual_Actual</fullName>
                </value>
                <value>
                    <fullName>Midnight_366</fullName>
                </value>
                <value>
                    <fullName>Actual_365.25</fullName>
                </value>
                <value>
                    <fullName>US_Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__APR_Without_Credit_Protection__c</fullName>
        <description>The system automatically populates this optional percent field to calculate and display the annual percentage rate (APR) without any applied credit protections. By default, it is blank.</description>
        <inlineHelpText>When populated, this field contains the annual percentage rate (APR) without any applied credit protections.</inlineHelpText>
        <label>APR Without Credit Protection</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_Loan_Purposes__c</fullName>
        <description>Users populate this optional multi-picklist field to indicate any additional purposes of the loan. By default, it is empty.</description>
        <inlineHelpText>Use this field to specify additional purposes of the loan.</inlineHelpText>
        <label>Additional Loan Purposes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Loan_Detail_Purposes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__ApplicationDate__c</fullName>
        <description>Users populate this optional date field to capture the date an application is completed for a loan. By default, the value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date application is completed.</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application_Method__c</fullName>
        <description>Users populate this optional picklist field to describe how the applicant submits the application. By default, it is empty.</description>
        <inlineHelpText>Select a value to describe which method the applicant uses to submit the application.</inlineHelpText>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-person</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Payment_Date__c</fullName>
        <description>The user manually populates this date field to indicate the due date of the loan’s balloon payment. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field indicates the loan’s balloon payment due date.</inlineHelpText>
        <label>Balloon Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculated_Balloon_Principal_Amount__c</fullName>
        <description>The system automatically populates this optional currency field to specify the principal portion of a calculated balloon amount. By default, it is blank.</description>
        <inlineHelpText>This field will populate after a user enters a rate and payment stream and an amortization term greater than the loan term. This results in a calculated balloon payment.</inlineHelpText>
        <label>Calculated Balloon Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collect_Odd_Days_Interest__c</fullName>
        <description>Administrators and users populate this optional picklist field to determine if a loan applies odd days interest and when that interest applies to the loan.</description>
        <inlineHelpText>Select an option to collect odd days interest.</inlineHelpText>
        <label>Collect Odd Days Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add to First Payment</fullName>
                </value>
                <value>
                    <fullName>Collect When Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional field to indicate a loan&apos;s eligibility for Dodd-Frank 1071 compliance reporting. By default, it is empty.</description>
        <inlineHelpText>The system automatically populates this optional field to indicate a loan&apos;s eligibility for Dodd-Frank 1071 compliance reporting. By default, it is empty.</inlineHelpText>
        <label>DF1071 Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Interest_Rate__c</fullName>
        <description>The system automatically populates this optional percentage field with the value of the calculated EIR.</description>
        <inlineHelpText>This field contains the value of the calculated EIR.</inlineHelpText>
        <label>EIR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Final_Payment_Date__c</fullName>
        <description>The system automatically populates this optional date field with the final payment date of the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field reflects the date of your final payment on the loan.</inlineHelpText>
        <label>Final Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Charge_Off_Date__c</fullName>
        <description>The user manually populates this date field to indicate the initial date that the loan moves from the Active to Default status. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field indicates the initial date loan moves from the Active to Default status.</inlineHelpText>
        <label>Gross Charge Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantee_Type__c</fullName>
        <description>Users select from this optional multi-picklist field to indicate which guarantee type(s) apply to the loan. By default, it is empty.</description>
        <inlineHelpText>Select the guarantee type(s) that apply to the loan.</inlineHelpText>
        <label>Guarantee Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>personal_owner</fullName>
                    <label>Personal guarantee - owner(s)</label>
                </value>
                <value>
                    <fullName>personal_non_owner</fullName>
                    <label>Personal guarantee - non-owner(s)</label>
                </value>
                <value>
                    <fullName>sba_7a</fullName>
                    <label>SBA guarantee - 7(a) program</label>
                </value>
                <value>
                    <fullName>sba_504</fullName>
                    <label>SBA guarantee - 504 program</label>
                </value>
                <value>
                    <fullName>sba_other</fullName>
                    <label>SBA guarantee - other</label>
                </value>
                <value>
                    <fullName>usda</fullName>
                    <label>USDA guarantee</label>
                </value>
                <value>
                    <fullName>fha</fullName>
                    <label>FHA insurance</label>
                </value>
                <value>
                    <fullName>bia</fullName>
                    <label>Bureau of Indian Affairs guarantee</label>
                </value>
                <value>
                    <fullName>other_federal</fullName>
                    <label>Other Federal guarantee</label>
                </value>
                <value>
                    <fullName>state_gov</fullName>
                    <label>State government guarantee</label>
                </value>
                <value>
                    <fullName>local_gov</fullName>
                    <label>Local government guarantee</label>
                </value>
                <value>
                    <fullName>no_guarantee</fullName>
                    <label>No guarantee</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_APR__c</fullName>
        <description>The system automatically populates this percentage field to display the loan’s Annual Percentage Rate before the user applies rate discounts to the loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the applicant’s APR without rate discounts applied to the loan.</inlineHelpText>
        <label>Initial APR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Monthly_Payment__c</fullName>
        <description>The system automatically populates this currency field to display the applicant’s monthly payment before the user applies rate discounts to the loan By default, this field is blank.</description>
        <inlineHelpText>This field displays the applicant’s calculated monthly payment without rate discounts applied to the loan.</inlineHelpText>
        <label>Initial Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Interest_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually populates this Boolean field to indicate if a loan is Interest Only. By default, this field is false.</description>
        <inlineHelpText>This field indicates if a loan is Interest Only.</inlineHelpText>
        <label>Interest Only Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Line_Of_Credit_Draw_Expiration_Date__c</fullName>
        <description>The user manually populates this date field to indicate the date at which the loan’s Line of Credit expires and enters repayment. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field indicates the date at which loan line of credit expires and converts to a loan.</inlineHelpText>
        <label>Line Of Credit Draw Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>A user populates this master-detail relationship to link a Loan Detail record to its corresponding Loan record.</description>
        <inlineHelpText>This master-detail relationship contains the associated Loan record’s Id.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Loan Details</relationshipLabel>
        <relationshipName>Loan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lookup_Key__c</fullName>
        <description>System administrators manually populate this optional text field to enter a unique external identifier, which associates the record with its matching record in an external system. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique identifier.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mod_Type__c</fullName>
        <description>The system populates this optional picklist field to specify the action type chosen for the corresponding loan.</description>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
                <value>
                    <fullName>Add New Sub-Loan</fullName>
                </value>
                <value>
                    <fullName>Copy Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Odd_Days__c</fullName>
        <description>The system automatically populates this optional number field to determine the number of odd days between closing and first payment. By default, it is blank.</description>
        <inlineHelpText>The number of days accumulating odd interest between closing and first payment.</inlineHelpText>
        <label>Number of Odd Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Odd_Days_Amount_Per_Diem__c</fullName>
        <description>The system automatically populates this optional currency field to determine the daily cost of the odd days interest the loan accrues. By default, it is blank.</description>
        <inlineHelpText>The daily cost of odd days interest on a loan.</inlineHelpText>
        <label>Odd Days Amount Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Odd_Days_Amount__c</fullName>
        <description>The system automatically populates this optional currency field to determine the amount of odd days interest the loan accrues. By default, it is blank.</description>
        <inlineHelpText>The amount of odd days interest accrued for the loan.</inlineHelpText>
        <label>Odd Days Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Preferred_Rate__c</fullName>
        <description>This field is automatically populated when a percentage value is entered into the Rate Discount field on Loan, and represents the discounted interest rate a customer will receive for their loan. This field is calculated as the loan’s Interest Rate minus the Rate Discount. By default, this field is blank.</description>
        <formula>(LLC_BI__Loan__r.LLC_BI__InterestRate__c - LLC_BI__Loan__r.LLC_BI__Rate_Discount__c)</formula>
        <inlineHelpText>This field automatically calculates a customer’s discounted interest rate for a loan.</inlineHelpText>
        <label>Preferred Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Loan_Purpose__c</fullName>
        <description>Users populate this optional picklist field to indicate the primary purpose of the loan. By default, it is empty.</description>
        <inlineHelpText>Use this field to specify the primary purpose of the loan.</inlineHelpText>
        <label>Primary Loan Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Loan_Detail_Purposes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Qualifying_Payment__c</fullName>
        <description>The system automatically populates this optional amount field to specify the payment used to calculate the proposed monthly debt.</description>
        <inlineHelpText>This system-populated field displays the monthly payment used to calculate the proposed monthly debt.</inlineHelpText>
        <label>Qualifying Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Qualifying_Rate__c</fullName>
        <description>The system automatically populates this optional percentage field to specify the interest rate used to calculate the proposed monthly debt. By default, it is blank.</description>
        <inlineHelpText>This system-populated field displays the interest rate used to calculate proposed monthly debt.</inlineHelpText>
        <label>Qualifying Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Recovery_Date__c</fullName>
        <description>The user manually populates this date field to indicate the date of loan recovery from nonpayment or default. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field indicates the date tied to the loan recovery amount.</inlineHelpText>
        <label>Recovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Interest_Percentage__c</fullName>
        <description>The system automatically populates this percentage field when the user selects an offer in the Retail Loan Workflow to indicate the total interest the borrower pays over the loan term. The system calculates total interest as a percentage of the loan amount. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total interest the borrower pays over the loan term as a percentage of the loan amount.</inlineHelpText>
        <label>Total Interest Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Payment_Over_5_Years__c</fullName>
        <description>The system automatically populates this currency field when the user selects an offer in the Retail Loan Workflow to indicate the total amount the borrower pays over the first five years of the loan term. This amount includes principal, interest, and loan costs. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total principal, interest,  and loan costs the borrower pays over the first five years of the loan term.</inlineHelpText>
        <label>Total Payment Over 5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Principal_Over_5_Years__c</fullName>
        <description>The system automatically populates this currency field when the user selects an offer in the Retail Loan Workflow to indicate the total principal the borrower pays over the first five years of the loan term. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total principal the borrower pays over the first five years of the loan term.</inlineHelpText>
        <label>Total Principal Over 5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_of_Payments__c</fullName>
        <description>The system automatically populates this currency field for loans subject to TRID tolerances to indicate the total amount the borrower pays over the loan term. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total principal, interest, and loan costs the borrower pays over the loan term.</inlineHelpText>
        <label>Total of Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Use_Preferred_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually selects this checkbox field to indicate that the system should calculate the loan using the value entered in the Preferred Interest Rate field. By default, this field is unchecked.</description>
        <inlineHelpText>Select this checkbox to use the Preferred Rate in loan calculations.</inlineHelpText>
        <label>Calculate with Preferred Rate</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>